--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <input type="text" placeholder="Entre  your city" />
-                                <button class="button is-primary" type="submit">search</button>
+                                <input type="text" placeholder="Entre  your city" id="search" />
+                                <button class="button is-primary" id="button" >search</button>
                             </div>
                         </form>
-                        <div class="widgets is-searchResults">
-                            <div class="widget">
+                        <div class="not-found" style="display:none ; text-align: center;">Not Found 🐈🐕</div>
+                        <div class="widgets is-searchResults" id="root">
+                            <!-- <div class="widget">
                                 <div class="widget__image">
                                     <img src="images/pet-01.png" alt="pet image">
                                 </div>
@@ -117,7 +118,7 @@
                                     <p>Male | Young</p>
                                     <p>Los Angeles CA</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -246,6 +247,7 @@
             </div>
         </footer>
     </div>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
