--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </form>
                         <div class="not-found" style="display:none ; text-align: center;">Not Found 🐈🐕</div>
                         <div class="widgets is-searchResults" id="root">
-                            <!-- <div class="widget">
+                            <div class="widget">
                                 <div class="widget__image">
                                     <img src="images/pet-01.png" alt="pet image">
                                 </div>
@@ -118,7 +118,7 @@
                                     <p>Male | Young</p>
                                     <p>Los Angeles CA</p>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
             </div>
         </footer>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
